Wed Feb 11 10:58:13 CET 1998

	- Added '-d' option to turn on debugging.
	- Added version number to ecpg.
	- Made libecpg a shared library.
	- All files are now installed by 'make install'.
	- Added man page.

Thu Feb 12 14:45:07 CET 1998

	- changed parser to correctly handle local variables.

Thu Feb 12 15:55:37 CET 1998

	- allow static and extern variable definitions.
	- free() variable structure completely.

Fri Feb 13 12:35:58 CET 1998

	- ecpg can use structs to store data, but only if the complete
	  definition of the struct lies inside the sql declare section
	  and only simple types used.

Fre Feb 13 14:12:41 CET 1998

	- struct definitions now work completely.

Mon Feb 16 16:17:21 CET 1998

	- enable initialisation in declare section.
	- connect call accepts a variable as well. 