@@ -11,4 +11,4 @@ extern FILE *yyin, *yyout;
 extern void lex_init(void);
 extern char * input_filename;
 extern int yyparse(void);
-extern void *mm_alloc(size_t);
+extern void *mm_alloc(size_t), *mm_realloc(void *, size_t);
